Referring back due to layout issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,17 +4,20 @@
 @import url('https://fonts.googleapis.com/css?family=|Molengo|Oxygen|Righteous|Rubik+Mono+One|Shadows+Into+Light&display=swap');
 
 body {
-  background-image: url("../img/alien.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+ margin: 0;
+  padding: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #DEDEDE;
   color: #FFFF;
-  padding: 20px 0 28px 0;
-  margin: 0;
-  text-align: center;
+  background-image: url("../img/alien.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 200px;
+  min-width: 200px;
+  -o-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  -moz-transition: all .5s ease-in-out;
+  -webkit-transition: all .5s ease-in-out;  
 }
 
 
